func: database update, css dynamic theme, project images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header>
             <section class="topHeader">
-                <h2 class="headerText">...</h2>
+                <h2 class="headerText alternateColor">...</h2>
             </section>            
             <section class="bottomHeader">
                 <h3 class="bottomHeaderText">...</h3>
@@ -46,7 +46,8 @@
                         <label for="body" class="form-email-body">...</label>
                         <textarea name="body" rows="8"
                                   class="form-email-message-placeholder"
-                                  placeholder="..."></textarea>
+                                  placeholder="..."
+                        ></textarea>
                     </div>
                     <div>
                         <input value="..." class="form-submit-button" type="submit"/>
@@ -69,7 +70,7 @@
                     <h3 class="pageCardTitle"></h3>
                     <h4 class="pageCardShortDescription"></h4>
                 </section>
-                <button class="pageCardPlayButton">...</button>
+                <a class="pageCardPlayButton" target="_blank" >...</a>
             </section>
         </li>
     </template>
