func: project details, style optimizations.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
                 <span>2023 - Trispyral Games</span>
             </section>
         </footer>
+
+        <section id="projectDetails">
+            <div class="windowBackground"></div>
+            <article>
+                <img/>
+                <section>
+                    <header>
+                        <div>
+                            <h2 class="projectDetailsTitle">...</h2>
+                            <h3 class="projectDetailsCategory">...</h3>
+                        </div>
+                        <a target="_blank">...</a>
+                    </header>
+                    <main>...</main>
+                </section>
+            </article>
+            <button id="closeProjectDetails">X</button>
+        </section>
+        
     </body>
 
     <template id="pageCard">
