func: add showroom

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="projectDetails.css"/>
         <title>Trispyral Games Website</title>
     </head>
     <body>
@@ -16,15 +17,16 @@
         </section>
 
         <header>
-            <section class="topHeader">
-                <h2 class="headerText alternateColor">...</h2>
-            </section>            
-            <section class="bottomHeader">
-                <h3 class="bottomHeaderText">...</h3>
+            <section class="page-showroom">
+                <div class="page-showroom-container"></div>
             </section>
+            <h2 class="topHeaderText alternateColor">...</h2>
         </header>
 
         <main>
+            <section class="bottomHeader">
+                <h3 class="bottomHeaderText">...</h3>
+            </section>
             <ul class="projects-list"></ul>
         </main>
 
