--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="projectDetails.css"/>
-        <title>Trispyral Games Website</title>
+        <title>Trispyral Studio Website</title>
     </head>
     <body>
         <section class="topNavigationBar">
             <img class="headerLogo" src="./media/icons/logo.png"/>
-            <h1 class="topnavTitle">Trispyral Games</h1>
+            <h1 class="topnavTitle">Trispyral Studio</h1>
             <nav>
                 
             </nav>
