func: change showroom to logo

--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
     </head>
     <body>
         <section class="topNavigationBar">
-            <img class="headerLogo" src="./media/icons/logo.png"/>
+            <img class="headerLogo" src="./media/icons/logo.svg"/>
             <h1 class="topnavTitle">Trispyral Games</h1>
             <nav>
                 
             </nav>
         </section>
 
-        <header>
-            <section class="page-showroom">
-                <div class="page-showroom-container"></div>
+        <header id="pageHeader">
+            <section>
+                <div></div>
+                <h2 class="topHeaderText alternateColor">...</h2>    
             </section>
-            <h2 class="topHeaderText alternateColor">...</h2>
+            <section>
+                <h3 class="topHeaderSecondText">
+                    ...
+                </h3>
+            </section>
         </header>
 
         <main>
