feature:Main - add new project

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </section>
 
             <section class="bottom-footer">
-                <span>2023 - Trispyral Games</span>
+                <span>2025 - Trispyral Games | Anderson Bucchianico</span>
             </section>
         </footer>
 
